--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,36 @@
     <!-- Comment out for DIST bundling -->
   </head>
   <body>
-    <div class="content"></div>
+    <header>
+      <h1>Lance To-do list App</h1>
+    </header>
+    <div id="side-nav" class="side-nav">
+      <a href="#">All items</a>
+      <span>Projects</span>
+      <a href="#">Coding</a>
+      <a href="#">Life</a>
+      <a href="#">Others</a>
+    </div>
+    <div id="content" class="content">
+      <div class="item">
+        <label class="container">
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+          Learn React
+        </label>
+        <span>Due 1/6/21</span>
+        <button>...</button>
+      </div>
+      <div class="item">
+        <label class="container">
+          <input type="checkbox" />
+          <span class="checkmark"></span>
+          Do Interview Questions
+        </label>
+        <span>Due 9/5/21</span>
+        <button>...</button>
+      </div>
+    </div>
     <script type="module" src="index.js"></script>
   </body>
 </html>
