--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       <h1>Lance To-do list App</h1>
     </header>
     <div id="side-nav" class="side-nav">
+      <button> Add new task </button>
       <a href="#">All items</a>
       <span>Projects</span>
       <a href="#">Coding</a>
@@ -20,20 +21,14 @@
     </div>
     <div id="content" class="content">
       <div class="item">
-        <label class="container">
-          <input type="checkbox" />
-          <span class="checkmark"></span>
-          Learn React
-        </label>
+        <input type="checkbox" />
+        <span> Learn React </span>
         <span>Due 1/6/21</span>
         <button>...</button>
       </div>
       <div class="item">
-        <label class="container">
-          <input type="checkbox" />
-          <span class="checkmark"></span>
-          Do Interview Questions
-        </label>
+        <input type="checkbox" />
+        <span> Do interview questions </span>
         <span>Due 9/5/21</span>
         <button>...</button>
       </div>
