--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>To-do list</title>
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="./style.css" type="text/css" />
     <!-- Comment out for DIST bundling -->
@@ -12,7 +12,7 @@
       <h1>Lance To-do list App</h1>
     </header>
     <div id="side-nav" class="side-nav">
-      <button> Add new task </button>
+      <button id='add-new-item'>Add new task</button>
       <a href="#">All items</a>
       <span>Projects</span>
       <a href="#">Coding</a>
@@ -20,19 +20,70 @@
       <a href="#">Others</a>
     </div>
     <div id="content" class="content">
-      <div class="item">
-        <input type="checkbox" />
-        <span> Learn React </span>
-        <span>Due 1/6/21</span>
-        <button>...</button>
-      </div>
-      <div class="item">
-        <input type="checkbox" />
-        <span> Do interview questions </span>
-        <span>Due 9/5/21</span>
-        <button>...</button>
+      <!-- <div class="item" id="item#0">
+        <div class="item-banner item-banner--editing">
+          <input type="checkbox" />
+          <input type="text" placeholder="Task name"></input>
+          <input type="date"></input>
+        </div>
+        <div class="item-info item-info--editing item-info--expanded">
+          <label>Description: </label>
+          <input type="text"></input><br>
+          <span>Priority: </span>
+          <input type="radio" id="priority!" name="priority" value="!" checked="yes">
+          <label for="priority!">!</label>
+          <input type="radio" id="priority!!" name="priority" value="!!">
+          <label for="priority!!">!!</label>
+          <input type="radio" id="priority!!!" name="priority" value="!!!">
+          <label for="priority!!!">!!!</label>
+          <br>
+          <button>Discard</button>
+          <button>Save</button>
+        </div>
+      </div> -->
+      <div class="item" id="item#1">
+        <div class="item-banner">
+          <input type="checkbox" />
+          <span> Do interview questions </span>
+          <span>Due 9/5/21</span>
+          <button>...</button>
+        </div>
+        <div class="item-info item-info--expanded">
+          <label>Description: </label>
+          <span>Do at least 1 Leetcode question</span>
+          <br>
+          <label>Priority: </label>
+          <span>!</span><br>
+          <button>Edit</button>
+          <button>Delete</button>
+        </div>
       </div>
     </div>
+    <template id="new-item-prompt-template">
+      <div class="item-banner item-banner--editing">
+        <input type="checkbox" />
+        <input type="text" placeholder="Task name"></input>
+        <input type="date"></input>
+      </div>
+      <div class="item-info item-info--editing item-info--expanded">
+        <label>Description: </label>
+        <input type="text">
+        <br>
+        <span>Priority: </span>
+        <input type="radio" id="priority!" name="priority" value="!" checked="yes">
+        <label for="priority!">!</label>
+        <input type="radio" id="priority!!" name="priority" value="!!">
+        <label for="priority!!">!!</label>
+        <input type="radio" id="priority!!!" name="priority" value="!!!">
+        <label for="priority!!!">!!!</label>
+        <br>
+        <label>Project: </label>
+        <input type="text">
+        <br>
+        <button>Discard</button>
+        <button>Save</button>
+      </div>
+    </template>
     <script type="module" src="index.js"></script>
   </body>
 </html>
