--- a/src/index.html
+++ b/src/index.html
@@ -17,36 +17,15 @@
       <span>Projects</span>
       <a href="#">Coding</a>
       <a href="#">Life</a>
-      <a href="#">Others</a>
+      <a href="#">Other</a>
     </div>
     <div id="content" class="content">
-      <!-- <div class="item" id="item#0">
-        <div class="item-banner item-banner--editing">
-          <input type="checkbox" />
-          <input type="text" placeholder="Task name"></input>
-          <input type="date"></input>
-        </div>
-        <div class="item-info item-info--editing item-info--expanded">
-          <label>Description: </label>
-          <input type="text"></input><br>
-          <span>Priority: </span>
-          <input type="radio" id="priority!" name="priority" value="!" checked="yes">
-          <label for="priority!">!</label>
-          <input type="radio" id="priority!!" name="priority" value="!!">
-          <label for="priority!!">!!</label>
-          <input type="radio" id="priority!!!" name="priority" value="!!!">
-          <label for="priority!!!">!!!</label>
-          <br>
-          <button>Discard</button>
-          <button>Save</button>
-        </div>
-      </div> -->
       <div class="item" id="item#1">
         <div class="item-banner">
           <input type="checkbox" />
           <span> Do interview questions </span>
           <span>Due 9/5/21</span>
-          <button>...</button>
+          <button class="show-info">...</button>
         </div>
         <div class="item-info item-info--expanded">
           <label>Description: </label>
@@ -72,6 +51,13 @@
       <div class="item-info item-info--editing item-info--expanded">
         <label>Description: </label>
         <input type="text">
+        <label>Project: </label>
+        <select name="projects" id="projects">
+          <option value="coding">Coding</option>
+          <option value="life">Life</option>
+          <option value="other">Other</option>
+          <!-- Need to be dynamic!!! -->
+        </select>
         <span>Priority: </span>
         <div>
           <input type="radio" id="priority!" name="priority" value="!" checked="yes">
@@ -81,8 +67,6 @@
           <input type="radio" id="priority!!!" name="priority" value="!!!">
           <label for="priority!!!">!!!</label>
         </div>
-        <label>Project: </label>
-        <input type="text">
         <br>
         <div>
           <button>Discard</button>
