Added logic to show/hide item info

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
           <span>Due 9/5/21</span>
           <button class="show-info">...</button>
         </div>
-        <div class="item-info item-info--expanded">
+        <div class="item-info">
           <label>Description: </label>
           <span>Do at least 1 Leetcode question</span>
           <span>Project: </span>
