--- a/src/index.html
+++ b/src/index.html
@@ -61,11 +61,11 @@
         <span>Priority: </span>
         <div>
           <input type="radio" id="priority!" name="priority" value="!" checked="yes">
-          <label for="priority!">!</label>
+          <label for="priority!" class='priority-label'>!</label>
           <input type="radio" id="priority!!" name="priority" value="!!">
-          <label for="priority!!">!!</label>
+          <label for="priority!!" class='priority-label'>!!</label>
           <input type="radio" id="priority!!!" name="priority" value="!!!">
-          <label for="priority!!!">!!!</label>
+          <label for="priority!!!" class='priority-label'>!!!</label>
         </div>
         <br>
         <div>
