--- a/src/index.html
+++ b/src/index.html
@@ -45,14 +45,14 @@
     <template id="new-item-prompt-template">
       <div class="item-banner item-banner--editing">
         <input type="checkbox" />
-        <input type="text" placeholder="Task name"></input>
-        <input type="date"></input>
+        <input type="text" placeholder="Task name" class="item-name item-name--editing"></input>
+        <input type="date" class="item-date--editing"></input>
       </div>
       <div class="item-info item-info--editing item-info--expanded">
         <label>Description: </label>
-        <input type="text">
+        <input type="text" class="item-description--editing">
         <label>Project: </label>
-        <select name="projects" id="projects">
+        <select name="projects" id="projects" class="item-project--editing">
           <option value="coding">Coding</option>
           <option value="life">Life</option>
           <option value="other">Other</option>
@@ -69,8 +69,8 @@
         </div>
         <br>
         <div>
-          <button>Discard</button>
-          <button>Save</button>
+          <button class="discard">Discard</button>
+          <button class="save-new-item">Save</button>
         </div>
       </div>
     </template>
