Added Github logo

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,12 @@
     <title>To-do list</title>
     <link rel="shortcut icon" href="#" />
     <link rel="stylesheet" href="./style.css" type="text/css" />
-    <!-- Comment out for DIST bundling -->
+    <!-- delete for DIST index -->
   </head>
   <body>
     <header>
       <h1>Lance To-do list App</h1>
+      <a href="https://github.com/lancedang64/project_todo-list" class="github-logo"></a>
     </header>
     <div id="side-nav" class="side-nav">
       <button id='add-new-item'>Add new task</button>
