Added logic to toggle an item completion status and visual display

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
     <template id="new-item-template">
       <div class="item-banner">
         <label class='checkbox-container'>
-          <input type="checkbox" />
+          <input type="checkbox" class="checkbox"/>
           <span class="custom-checkbox"></span>
         </label>
         <span class='item-name'></span>
