Added logic to switch between project tabs and all items

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
       <button id='add-new-item'>Add new task</button>
       <a href="#" id="all-items" class="tab tab--selected">All items</a>
       <span>Projects</span>
-      <a href="#">Coding</a>
-      <a href="#">Life</a>
-      <a href="#">Other</a>
+      <a href="#" class='tab'>Coding</a>
+      <a href="#" class='tab'>Life</a>
+      <a href="#" class='tab'>Other</a>
     </div>
     <div id="content" class="content">
     </div>
