--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,6 @@
       <a href="https://github.com/lancedang64/project_todo-list" class="github-logo"></a>
     </header>
     <div id="side-nav" class="side-nav">
-      <button id='add-new-item'>Add new task</button>
       <a href="#" id="all-items" class="tab tab--selected">All items</a>
       <span>Projects</span>
       <a href="#" class='tab'>Coding</a>
@@ -21,6 +20,12 @@
       <a href="#" class='tab'>Other</a>
     </div>
     <div id="content" class="content">
+      <div class="tab-panel">
+        <span class="tab-name">All items</span>
+        <button class='add-new-item'>Add new item</button>
+        <button class="add-new-project">Add new project</button>
+        <button class="delete-project">Delete project</button>
+      </div>
     </div>
     <template id="new-item-prompt-template">
       <div class="item-banner item-banner--editing">
